--- a/src/screens/Website/sections/HeroSection/HeroSection.css
+++ b/src/screens/Website/sections/HeroSection/HeroSection.css
@@ -190,7 +190,7 @@
   width: 500px;
   font-family: 'Outfit', Helvetica, sans-serif;
   font-weight: normal;
-  color: #b0b0b0;
+  color: #b9b9b9;
   font-size: 1.5rem;
   letter-spacing: 0;
   line-height: 33.6px;
